Improve form UX and fix category icons

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
             <div class="form-group">
               <label class="form-label" for="amount">Amount (Rp)</label>
-              <input type="number" id="amount" name="amount" class="form-input" placeholder="0" min="0" required />
+              <input type="text" id="amount" name="amount" class="form-input" placeholder="Amount" required />
             </div>
 
             <div class="form-group">
